--- a/accounting-reporting/build.properties
+++ b/accounting-reporting/build.properties
@@ -2,7 +2,4 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               lib/commons-collections-3.2.1.jar,\
-               lib/iText-2.1.7.jar,\
-               lib/commons-digester-2.1.jar,\
-               lib/jasperreports-4.8.0.jar
+               lib/
